apply suggested migrations (#1088)
* apply code migrations as suggested by IntelliJ Idea and Sonar

* fix compilation error + typo

* fix regression